@@ -1,5 +1,6 @@
 0.9.10 (Zope 2.11 edition)
 - Switched to Zope3 interfaces.
+- Removed broken profiler support.
 
 0.9.9 (Zope 2.11 edition)
 - transaction.commit(1) is deprecated in favor of transaction.savepoint(1).
